# ircie

./: .gitignore  Cargo.toml  irc_config.yaml
examples/: hello_world.rs
src/: context.rs  events.rs  factory.rs  format.rs  irc_command.rs  lib.rs  system.rs  system_params.rs
